# imeg

./: .gitignore  Cargo.toml  README.md  README.zh.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: db.rs  error.rs  handlers.rs  main.rs  models.rs
backend/src/utils/: file.rs
docker/: docker-compose.yml
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
frontend/src/: App.tsx  types.tsx
frontend/src/components/: Canvas.tsx  ComponentsSidebar.tsx  Editor.tsx  ElementRenderer.tsx  PageSettingsPanel.tsx  PreviewMode.tsx  PropertiesPanel.tsx  Toolbar.tsx
frontend/src/constants/: components.tsx
frontend/src/hooks/: useEditorState.tsx  useElementInteraction.tsx
frontend/src/services/: api.ts
html/: README.html  index.html
markdown/: index.md
src/: converter.rs  error.rs  main.rs
src/utils/: file.rs
