[package]
name = "ImI"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"

description = """
Decentralized & Codeless content sharing system.
"""

authors = [
    "ImFeH2 <i@feh2.im>"
]

[workspace]
members = [
    "."
]

keywords = []
categories = []

[dependencies]
markdown = "1.0.0-alpha.21"
