[package]
name = "ImI"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"

description = """
Decentralized & Codeless content sharing system.
"""

authors = [
    "ImFeH2 <i@feh2.im>"
]

[workspace]
members = [
    "."
]

[dependencies]
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["full"] }  # This enables all Tokio features including rt-multi-thread
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
